<resources>
    <string name="app_name">Food Ordering Admin App</string>
    <string name="open_naigation_bar">Open Navigation Drawer</string>
    <string name="close_navigation_bar">Closed Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_product">Add Product</string>
    <string name="add_category">Add Category</string>
    <string name="category_name">Category name</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Product price</string>
    <string name="prepare_time">Prepare time</string>
    <string name="person_per_serve">Person per serve</string>
    <string name="product_description">Product description</string>
    <string name="dashboard">Dashboard</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="delivered_orders">Delivered Orders</string>
    <string name="customers">Customers</string>
    <string name="products">Products</string>
    <string name="category">Category</string>
    <string name="services">Services</string>
    <string name="view_products">View Products</string>
    <string name="view_categories">View Categories</string>
    <string name="view_orders">View Orders</string>
    <string name="view_users">View Users</string>
    <string name="loading">Loading</string>
    <string name="city">City :</string>
    <string name="area">Area :</string>
    <string name="detected_address">Detected Address :</string>
    <string name="order_location">Order Location</string>
    <string name="postal_code">Postal Code :</string>
    <string name="order">Order</string>
    <string name="view_location">View location</string>
    <string name="change_status">Change Status:</string>
    <string name="total_price">Total Price:</string>
    <string name="order_made">Order made:</string>
    <string name="customer_name">Customer Name</string>
    <string name="view_customers">View Customers</string>
    <string name="delete">Delete</string>
    <string name="order_id">Order Id:</string>
    <string name="price">Price</string>
    <string name="total">Total :</string>
    <string name="order_date">Order Date :</string>
    <string name="date">Date</string>
    <string name="pending">Pending</string>
    <string name="orders">Orders</string>
    <string name="block_customer">Block Customer</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
</resources>