<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/sideNavGroupMain">
        <item
            android:id="@+id/sideNavHome"
            android:title="@string/home"
            android:checked="true"

            />
        <item
            android:id="@+id/sideNavAddProduct"
            android:title="@string/add_product"
            android:visible="false"
            android:iconTint="@color/black"
            />
        <item
            android:id="@+id/sideNavViewProducts"
            android:title="@string/view_products"
            android:visible="false"
            android:iconTint="@color/black"
            />
        <item
            android:id="@+id/sideNavAddCategory"
            android:title="@string/add_category"
            android:visible="false"
            android:iconTint="@color/black"
            />
        <item
            android:id="@+id/sideNavViewCategory"
            android:title="@string/view_categories"
            android:visible="false"
            android:iconTint="@color/black"
            />
        <item
            android:id="@+id/sideViewOrders"
            android:title="@string/view_orders"
            android:icon="@drawable/baseline_delivery_dining_24"
            android:visible="false"
            android:iconTint="@color/black"
            />
        <item
            android:id="@+id/sideViewUsers"
            android:title="@string/view_users"
            android:icon="@drawable/baseline_supervised_user_circle_24"
            android:visible="false"
            android:iconTint="@color/black"
            />




    </group>

    <group android:id="@+id/sideNavGroupAuth">
        <item
            android:id="@+id/sideNavLogin"
            android:title="@string/login"
            android:iconTintMode="add"
            android:iconTint="@color/black"
            android:icon="@drawable/baseline_login_24"/>
        <item
            android:id="@+id/sideNavLogout"
            android:title="@string/logout"
            android:visible="false"/>
    </group>


</menu>

<!--<group android:id="@+id/sideNavGroupMain">-->
<!--<item-->
<!--    android:id="@+id/sideNavHome"-->
<!--    android:title="Home"-->
<!--    android:icon="@drawable/baseline_home_24"-->
<!--    android:checked="true"-->

<!--    />-->
<!--<item-->
<!--    android:id="@+id/sideNavAddProduct"-->
<!--    android:title="Add Product"-->
<!--    android:icon="@drawable/baseline_add_to_photos_24"-->
<!--    android:visible="false"-->
<!--    android:iconTint="@color/black"-->
<!--    />-->
<!--<item-->
<!--    android:id="@+id/sideNavViewProducts"-->
<!--    android:title="View Products"-->
<!--    android:icon="@drawable/baseline_featured_play_list_24"-->
<!--    android:visible="false"-->
<!--    android:iconTint="@color/black"-->
<!--    />-->
<!--<item-->
<!--    android:id="@+id/sideNavAddCategory"-->
<!--    android:title="Add Category"-->
<!--    android:icon="@drawable/baseline_playlist_add_check_24"-->
<!--    android:visible="false"-->
<!--    android:iconTint="@color/black"-->
<!--    />-->
<!--<item-->
<!--    android:id="@+id/sideNavViewCategory"-->
<!--    android:title="View Category"-->
<!--    android:icon="@drawable/baseline_featured_play_list_24"-->
<!--    android:visible="false"-->
<!--    android:iconTint="@color/black"-->
<!--    />-->
<!--<item-->
<!--    android:id="@+id/sideViewOrders"-->
<!--    android:title="View Orders"-->
<!--    android:icon="@drawable/baseline_delivery_dining_24"-->
<!--    android:visible="false"-->
<!--    android:iconTint="@color/black"-->
<!--    />-->
<!--<item-->
<!--    android:id="@+id/sideViewUsers"-->
<!--    android:title="View Users"-->
<!--    android:icon="@drawable/baseline_supervised_user_circle_24"-->
<!--    android:visible="false"-->
<!--    android:iconTint="@color/black"-->
<!--    />-->
<!--<item-->
<!--    android:id="@+id/sideNavProfile"-->
<!--    android:title="Profile"-->
<!--    android:icon="@drawable/baseline_account_circle_24"-->
<!--    android:visible="false"-->
<!--    android:iconTint="@color/black"-->
<!--    />-->

